0.11/_sources/api/generated/deepchecks.vision.datasets.classification.mnist_torch.MnistModel.rst.txt

MnistModel
==========



.. currentmodule:: deepchecks.vision.datasets.classification.mnist_torch

.. autoclass:: MnistModel
   :special-members: __init__



.. rubric:: Attributes

.. autosummary::
   :toctree:

   

   
   MnistModel.dump_patches
   

   
   MnistModel.training
   






.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   MnistModel.add_module
   
   
   MnistModel.apply
   
   
   MnistModel.bfloat16
   
   
   MnistModel.buffers
   
   
   MnistModel.children
   
   
   MnistModel.cpu
   
   
   MnistModel.cuda
   
   
   MnistModel.double
   
   
   MnistModel.eval
   
   
   MnistModel.extra_repr
   
   
   MnistModel.float
   
   
   MnistModel.forward
   
   
   MnistModel.get_buffer
   
   
   MnistModel.get_extra_state
   
   
   MnistModel.get_parameter
   
   
   MnistModel.get_submodule
   
   
   MnistModel.half
   
   
   MnistModel.load_state_dict
   
   
   MnistModel.modules
   
   
   MnistModel.named_buffers
   
   
   MnistModel.named_children
   
   
   MnistModel.named_modules
   
   
   MnistModel.named_parameters
   
   
   MnistModel.parameters
   
   
   MnistModel.register_backward_hook
   
   
   MnistModel.register_buffer
   
   
   MnistModel.register_forward_hook
   
   
   MnistModel.register_forward_pre_hook
   
   
   MnistModel.register_full_backward_hook
   
   
   MnistModel.register_parameter
   
   
   MnistModel.requires_grad_
   
   
   MnistModel.set_extra_state
   
   
   MnistModel.share_memory
   
   
   MnistModel.state_dict
   
   
   MnistModel.to
   
   
   MnistModel.to_empty
   
   
   MnistModel.train
   
   
   MnistModel.type
   
   
   MnistModel.xpu
   
   
   MnistModel.zero_grad
   






